add: current workout view controller

--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -139,6 +139,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j42-6i-gar">
                                                 <rect key="frame" x="40" y="683" width="334" height="30"/>
                                                 <state key="normal" title="Start"/>
+                                                <connections>
+                                                    <segue destination="DCp-fm-e6a" kind="show" id="974-vp-HlD"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Of9-Kc-1FB">
                                                 <rect key="frame" x="40" y="633" width="334" height="30"/>
@@ -206,6 +209,61 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IiD-ix-oRP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1811.594202898551" y="73.660714285714278"/>
+        </scene>
+        <!--Current Workout View Controller-->
+        <scene sceneID="RLy-D7-yL3">
+            <objects>
+                <viewController id="DCp-fm-e6a" customClass="CurrentWorkoutViewController" customModule="Workouts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p3M-d1-f8S">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zy0-Gl-sUm">
+                                <rect key="frame" x="20" y="118" width="374" height="644"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zPT-qU-Xht">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gxD-uT-xUC">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="BpQ-zB-LEG">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HWg-TA-FSD">
+                                <rect key="frame" x="40" y="782" width="334" height="30"/>
+                                <state key="normal" title="Complete"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Jhw-Ye-z7x"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HWg-TA-FSD" firstAttribute="top" secondItem="zy0-Gl-sUm" secondAttribute="bottom" constant="20" id="56B-EO-4Hb"/>
+                            <constraint firstItem="zy0-Gl-sUm" firstAttribute="leading" secondItem="Jhw-Ye-z7x" secondAttribute="leading" constant="20" id="DXc-C4-by3"/>
+                            <constraint firstItem="Jhw-Ye-z7x" firstAttribute="bottom" secondItem="HWg-TA-FSD" secondAttribute="bottom" constant="50" id="GjC-kn-D7V"/>
+                            <constraint firstItem="HWg-TA-FSD" firstAttribute="leading" secondItem="Jhw-Ye-z7x" secondAttribute="leading" constant="40" id="snA-1S-mh2"/>
+                            <constraint firstItem="Jhw-Ye-z7x" firstAttribute="trailing" secondItem="HWg-TA-FSD" secondAttribute="trailing" constant="40" id="tdU-5j-s4I"/>
+                            <constraint firstItem="Jhw-Ye-z7x" firstAttribute="trailing" secondItem="zy0-Gl-sUm" secondAttribute="trailing" constant="20" id="wah-o9-fEL"/>
+                            <constraint firstItem="zy0-Gl-sUm" firstAttribute="top" secondItem="Jhw-Ye-z7x" secondAttribute="top" constant="30" id="yFz-YD-WZx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Bu3-a0-qDv"/>
+                    <connections>
+                        <outlet property="completeWorkoutButton" destination="HWg-TA-FSD" id="DyU-x3-Jn2"/>
+                        <outlet property="workoutCollectionView" destination="zy0-Gl-sUm" id="vmW-PU-OPL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="azz-yp-0if" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1802" y="788"/>
         </scene>
         <!--Update Exercise View Controller-->
         <scene sceneID="yC7-nZ-0QO">
