--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Awu-Nw-XKe">
                             <connections>
                                 <action selector="addNewWorkout:" destination="BYZ-38-t0r" id="m7T-hw-reX"/>
-                                <segue destination="XGK-4e-zos" kind="show" id="Gzf-r9-3bT"/>
+                                <segue destination="XGK-4e-zos" kind="show" id="qNX-XW-Agj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -170,6 +170,7 @@
                                             <constraint firstItem="Fkv-YV-QpJ" firstAttribute="top" secondItem="bTo-tC-UfW" secondAttribute="bottom" constant="30" id="0lg-sf-Kgb"/>
                                             <constraint firstItem="bTo-tC-UfW" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="1m5-A3-zFs"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="l4H-gL-3Sv" secondAttribute="trailing" constant="20" symbolic="YES" id="2rS-dD-flj"/>
+                                            <constraint firstAttribute="trailing" secondItem="j42-6i-gar" secondAttribute="trailing" constant="40" id="AVR-Rd-06D"/>
                                             <constraint firstItem="Of9-Kc-1FB" firstAttribute="top" secondItem="RS7-lb-rca" secondAttribute="bottom" constant="40" id="DCU-62-VG5"/>
                                             <constraint firstItem="Fkv-YV-QpJ" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="FHm-Yl-j2m"/>
                                             <constraint firstAttribute="trailing" secondItem="VH7-RU-146" secondAttribute="trailing" constant="20" id="JTQ-cL-cjQ"/>
@@ -178,8 +179,10 @@
                                             <constraint firstItem="j42-6i-gar" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="40" id="QtI-OQ-40C"/>
                                             <constraint firstItem="l4H-gL-3Sv" firstAttribute="top" secondItem="VH7-RU-146" secondAttribute="bottom" constant="40" id="TNW-el-e72"/>
                                             <constraint firstItem="RS7-lb-rca" firstAttribute="top" secondItem="l4H-gL-3Sv" secondAttribute="bottom" constant="20" id="Tqf-rW-C70"/>
+                                            <constraint firstItem="j42-6i-gar" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="40" id="ULS-M5-eFS"/>
                                             <constraint firstItem="j42-6i-gar" firstAttribute="top" secondItem="Of9-Kc-1FB" secondAttribute="bottom" constant="20" id="Zis-HL-hfl"/>
                                             <constraint firstItem="VH7-RU-146" firstAttribute="top" secondItem="Fkv-YV-QpJ" secondAttribute="bottom" constant="20" id="dCu-el-WJQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="Of9-Kc-1FB" secondAttribute="trailing" constant="40" id="g75-ZK-HSB"/>
                                             <constraint firstAttribute="trailing" secondItem="RS7-lb-rca" secondAttribute="trailing" constant="20" id="g7N-Qq-WJ3"/>
                                             <constraint firstItem="bTo-tC-UfW" firstAttribute="top" secondItem="f6A-GA-lBR" secondAttribute="bottom" constant="20" id="kYX-Rq-v27"/>
                                             <constraint firstItem="VH7-RU-146" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="mGo-NQ-SpD"/>
@@ -187,10 +190,11 @@
                                             <constraint firstAttribute="bottom" secondItem="j42-6i-gar" secondAttribute="bottom" constant="20" id="tHh-gT-Tpa"/>
                                             <constraint firstItem="l4H-gL-3Sv" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="uW1-Jn-ili"/>
                                             <constraint firstItem="RS7-lb-rca" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="vcf-fV-Dev"/>
-                                            <constraint firstAttribute="trailing" secondItem="j42-6i-gar" secondAttribute="trailing" constant="40" id="wDT-sC-gd1"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="j42-6i-gar" secondAttribute="trailing" constant="20" symbolic="YES" id="wDT-sC-gd1"/>
                                             <constraint firstItem="f6A-GA-lBR" firstAttribute="top" secondItem="xWr-Zl-WNl" secondAttribute="top" constant="20" id="wzj-7E-zzG"/>
+                                            <constraint firstItem="Of9-Kc-1FB" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="40" id="xac-8t-GSZ"/>
                                             <constraint firstItem="l4H-gL-3Sv" firstAttribute="centerX" secondItem="RS7-lb-rca" secondAttribute="centerX" id="xus-nn-Tpk"/>
-                                            <constraint firstAttribute="trailing" secondItem="Of9-Kc-1FB" secondAttribute="trailing" constant="40" id="z2h-es-Hme"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Of9-Kc-1FB" secondAttribute="trailing" constant="20" symbolic="YES" id="z2h-es-Hme"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fkv-YV-QpJ" secondAttribute="trailing" constant="20" symbolic="YES" id="zSb-MT-JiL"/>
                                             <constraint firstItem="Of9-Kc-1FB" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="40" id="zzu-pI-7NF"/>
                                         </constraints>
