--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Workouts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Workouts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -70,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="73.660714285714278"/>
+            <point key="canvasLocation" x="1957.9710144927537" y="73.660714285714278"/>
         </scene>
         <!--Add Workout View Controller-->
         <scene sceneID="b4z-hv-dYC">
@@ -230,7 +230,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IiD-ix-oRP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1811.594202898551" y="73.660714285714278"/>
+            <point key="canvasLocation" x="2721.739130434783" y="73.660714285714278"/>
         </scene>
         <!--Current Workout View Controller-->
         <scene sceneID="RLy-D7-yL3">
@@ -285,7 +285,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="azz-yp-0if" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1802" y="788"/>
+            <point key="canvasLocation" x="2711.594202898551" y="787.5"/>
         </scene>
         <!--Update Exercise View Controller-->
         <scene sceneID="yC7-nZ-0QO">
@@ -420,7 +420,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rQm-Sc-snn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2592.753623188406" y="73.660714285714278"/>
+            <point key="canvasLocation" x="3502.898550724638" y="73.660714285714278"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="b5Z-qm-276">
@@ -438,7 +438,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LZd-KA-kg6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="73.660714285714278"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="73.660714285714278"/>
         </scene>
     </scenes>
     <resources>
