--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -21,21 +21,57 @@
                                 <rect key="frame" x="20" y="118" width="374" height="724"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="p8i-YP-OMf">
-                                    <size key="itemSize" width="300" height="70"/>
+                                    <size key="itemSize" width="335" height="97"/>
                                     <size key="estimatedItemSize" width="300" height="70"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="o1v-ip-fiT">
-                                        <rect key="frame" x="37" y="0.0" width="300" height="70"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="SessionCollectionViewCell" id="o1v-ip-fiT" customClass="SessionCollectionViewCell" customModule="Workouts" customModuleProvider="target">
+                                        <rect key="frame" x="19.5" y="0.0" width="335" height="97"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GSd-jy-7Q0">
-                                            <rect key="frame" x="0.0" y="0.0" width="300" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="97"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dke-fg-u4t">
+                                                    <rect key="frame" x="10" y="8" width="315" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrQ-0i-qED">
+                                                    <rect key="frame" x="10" y="34" width="315" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0J-hc-vxC">
+                                                    <rect key="frame" x="10" y="68" width="315" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vrQ-0i-qED" firstAttribute="leading" secondItem="GSd-jy-7Q0" secondAttribute="leading" constant="10" id="9l7-U3-4wy"/>
+                                                <constraint firstItem="dke-fg-u4t" firstAttribute="top" secondItem="GSd-jy-7Q0" secondAttribute="top" constant="8" id="VbD-vd-0An"/>
+                                                <constraint firstAttribute="trailing" secondItem="vrQ-0i-qED" secondAttribute="trailing" constant="10" id="Z7X-D1-AnQ"/>
+                                                <constraint firstItem="k0J-hc-vxC" firstAttribute="leading" secondItem="GSd-jy-7Q0" secondAttribute="leading" constant="10" id="cGz-F8-uzD"/>
+                                                <constraint firstAttribute="bottom" secondItem="k0J-hc-vxC" secondAttribute="bottom" constant="8" id="kAl-Nj-vJt"/>
+                                                <constraint firstAttribute="trailing" secondItem="k0J-hc-vxC" secondAttribute="trailing" constant="10" id="mIz-8p-gkD"/>
+                                                <constraint firstItem="vrQ-0i-qED" firstAttribute="top" secondItem="dke-fg-u4t" secondAttribute="bottom" constant="5" id="olD-bS-5Ma"/>
+                                                <constraint firstItem="dke-fg-u4t" firstAttribute="leading" secondItem="GSd-jy-7Q0" secondAttribute="leading" constant="10" id="poq-a7-dBW"/>
+                                                <constraint firstAttribute="trailing" secondItem="dke-fg-u4t" secondAttribute="trailing" constant="10" id="rFY-57-Hvw"/>
+                                                <constraint firstItem="k0J-hc-vxC" firstAttribute="top" secondItem="vrQ-0i-qED" secondAttribute="bottom" constant="17" id="y9h-F6-buR"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="335" height="97"/>
                                         <connections>
+                                            <outlet property="dateLastCompleted" destination="k0J-hc-vxC" id="3Zf-x8-yCa"/>
+                                            <outlet property="nameLabel" destination="dke-fg-u4t" id="Osu-Tv-iqf"/>
+                                            <outlet property="targetAreasLabel" destination="vrQ-0i-qED" id="mbG-WT-b8Y"/>
                                             <segue destination="XGK-4e-zos" kind="show" identifier="workout" id="FKa-Gy-eLF"/>
                                         </connections>
                                     </collectionViewCell>
@@ -453,9 +489,12 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="FKa-Gy-eLF"/>
+        <segue reference="qNX-XW-Agj"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
